fixed filter scroll on mobile mode

--- a/public/styles/filter.css
+++ b/public/styles/filter.css
@@ -83,6 +83,7 @@ aside.filterSettings{
     height:100vh;
     padding:20px;
     filter: drop-shadow(-5px 0 5px #0000004d);
+    overflow: scroll;
 }
 
 .filterSettingContainer div{
